HelloUltraviolet/Fixtures/RejectedSource/FFI/RawExportNonPublic/Expected.uv
//! Expected diagnostic metadata for the RawExportNonPublic rejected-source specimen.

expectedDiagnostic("E-SYS-3353", "diagnostics.23.RawExportDiagnostics")
